Jane Goodall Edit 1

--- a/jane-goodall.html
+++ b/jane-goodall.html
@@ -26,8 +26,8 @@
 <section>
     <h2><em>Learn More...</em></h2>
     <ul>
-        <li><a href='https://en.wikipedia.org/wiki/Jane_Goodall' target=_'blank'>Wikipedia</a></li>
-        <li><a href='http://ngm.nationalgeographic.com/2010/10/jane-goodall/quammen-text' target=_'blank'>National Geographic Magazine</a></li>
-        <li><a href='http://www.janegoodall.org' target=_'blank'>Jane Goodall Institute</a></li>
+        <li><a href='https://en.wikipedia.org/wiki/Jane_Goodall' target='_blank'>Wikipedia</a></li>
+        <li><a href='http://ngm.nationalgeographic.com/2010/10/jane-goodall/quammen-text' target='_blank'>National Geographic Magazine</a></li>
+        <li><a href='http://www.janegoodall.org' target='_blank'>Jane Goodall Institute</a></li>
     </ul>
 </section>
