Jane Goodall Page Structure Edit

--- a/jane-goodall.html
+++ b/jane-goodall.html
@@ -1,33 +1,46 @@
-<header>
-    <h1>Jane Goodall</h1>
-    <img width='600' height='450' alt='Photo of Jane Goodall With Chimp' src='http://assets.filemobile.com/148/media/gallery/JaneGoodall2(Photo-Courtesy-of-The-Jane-Goodall-Institute).jpg'>
-</header>
+<!DOCTYPE html>
+<html>
+<head>
 
-<section>
-    <blockquote>
-        "If you really want something, and really work hard, and take advantage of opportunities, and never give up, you will find a way."
-    </blockquote>
+    <title>Jane Goodall</title>
+    <meta charset='utf-8'>
 
-    <p>
-        Jane Goodall is a British primatologist, ethnologist, and anthropologist. She is best known for her studies of chimpanzees. She was born in London in 1934. At an early age she developed a love of animals and become fascinated by Africa. In the 1950s and early 1960s, Goodall worked for Louis Leakey in Kenya and Tanzania, first as a secretary and later as a researcher. From her oberservations in the field, Goodall has provided evidence of the chimpanzee's capability to make and use tools, and has shown that the chimpanzee is not vegetarian, as was formerly believed, and can exhibit aggressive behavior.
-    </p>
-</section>
+</head>
+<body>
 
-<section>
-    <h2><em>Interesting Facts</em></h2>
-    <ol>
-        <li>Her early love of animals was sparked by a stuffed chimpanzee that she received as a child</li>
-        <li>Attended Cambridge University in 1962, where she obtained a degree in Ethnology</li>
-        <li>Has received numerous awards and titles, including Dame Commander of the Order of the British Empire</li>
-        <li>Has been criticized for going against accepted practice, identifying chimpanzees in her studies by name rather than by number</li>
-    </ol>
-</section>
+    <header>
+        <h1>Jane Goodall</h1>
+        <img width='600' height='450' alt='Photo of Jane Goodall With Chimp' src='http://assets.filemobile.com/148/media/gallery/JaneGoodall2(Photo-Courtesy-of-The-Jane-Goodall-Institute).jpg'>
+    </header>
 
-<section>
-    <h2><em>Learn More...</em></h2>
-    <ul>
-        <li><a href='https://en.wikipedia.org/wiki/Jane_Goodall' target='_blank'>Wikipedia</a></li>
-        <li><a href='http://ngm.nationalgeographic.com/2010/10/jane-goodall/quammen-text' target='_blank'>National Geographic Magazine</a></li>
-        <li><a href='http://www.janegoodall.org' target='_blank'>Jane Goodall Institute</a></li>
-    </ul>
-</section>
+    <section>
+        <blockquote>
+            "If you really want something, and really work hard, and take advantage of opportunities, and never give up, you will find a way."
+        </blockquote>
+
+        <p>
+            Jane Goodall is a British primatologist, ethnologist, and anthropologist. She is best known for her studies of chimpanzees. She was born in London in 1934. At an early age she developed a love of animals and become fascinated by Africa. In the 1950s and early 1960s, Goodall worked for Louis Leakey in Kenya and Tanzania, first as a secretary and later as a researcher. From her oberservations in the field, Goodall has provided evidence of the chimpanzee's capability to make and use tools, and has shown that the chimpanzee is not vegetarian, as was formerly believed, and can exhibit aggressive behavior.
+        </p>
+    </section>
+
+    <section>
+        <h2><em>Interesting Facts</em></h2>
+        <ol>
+            <li>Her early love of animals was sparked by a stuffed chimpanzee that she received as a child</li>
+            <li>Attended Cambridge University in 1962, where she obtained a degree in Ethnology</li>
+            <li>Has received numerous awards and titles, including Dame Commander of the Order of the British Empire</li>
+            <li>Has been criticized for going against accepted practice, identifying chimpanzees in her studies by name rather than by number</li>
+        </ol>
+    </section>
+
+    <section>
+        <h2><em>Learn More...</em></h2>
+        <ul>
+            <li><a href='https://en.wikipedia.org/wiki/Jane_Goodall' target='_blank'>Wikipedia</a></li>
+            <li><a href='http://ngm.nationalgeographic.com/2010/10/jane-goodall/quammen-text' target='_blank'>National Geographic Magazine</a></li>
+            <li><a href='http://www.janegoodall.org' target='_blank'>Jane Goodall Institute</a></li>
+        </ul>
+    </section>
+
+</body>
+</html>
